[gd_scene load_steps=5 format=3 uid="uid://bawtwrbryufl2"]

[ext_resource type="Script" path="res://scripts/ui/fish_amount_animation.gd" id="1_d5bd8"]

[sub_resource type="Animation" id="Animation_ca8m7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AmountLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0k3m2"]
resource_name = "fish_amount_animation"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AmountLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.378929, 0.420448),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rvbfq"]
_data = {
"RESET": SubResource("Animation_ca8m7"),
"fish_amount_animation": SubResource("Animation_0k3m2")
}

[node name="FishAmountAnimation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d5bd8")

[node name="AmountLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 128.0
offset_bottom = 28.0
theme_override_colors/default_color = Color(1, 0.698445, 0.779393, 1)
text = "100"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rvbfq")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
